--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "homepage": "https://github.com/vompir/project3#readme",
   "description": "",
   "devDependencies": {
-    "gulp": "^5.0.0"
+    "browser-sync": "^3.0.4",
+    "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-sass": "^6.0.1",
+    "sass": "^1.86.3"
   }
 }
