--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^6.0.1",
-    "sass": "^1.86.3"
+    "sass": "^1.86.3",
+    "sass-migrator": "^2.3.1"
   }
 }
